@@ -32,6 +32,7 @@ version 1.6.0 Thu Aug 24 by luispedro
 	* 'jug execute --keep-going' now ends with non-zero exit code in case of failures
 	* Fix bug with cleanup in dict_store not providing the number of removed records
 	* Add 'jug cleanup --keep-locks' to remove obsolete results without affecting locks
+	* jug.backend.base_store has 1 new method 'listlocks'
 
 version 1.5.0 Sun Jul 16 2017 by luispedro
 	* Add 'demo' subcommand
